# word2vec

./: CMakeLists.txt  README.md
